<resources>
    <string name="app_name">FirebaseSamples</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_password">Password</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="signin">Sign In</string>
    <string name="resetPassword">Reset Password</string>
    <string name="sendData">Send Data</string>


</resources>
